Fix interest-cohort permissions policy warning

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Your online videogames library"
     />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Game Affinity</title>
   </head>
